log
Wed 24 Apr 2024 11:54:14 PM UTC: 
 hashmap.c | 6 ++++--
 1 file changed, 4 insertions(+), 2 deletions(-)
 tests:  0|6
total_score: 0/70
6520f36
Thu 25 Apr 2024 12:04:38 AM UTC: 
 hashmap.c | 7 ++++++-
 1 file changed, 6 insertions(+), 1 deletion(-)
 tests:  0|0
7b5ed82
Thu 25 Apr 2024 12:06:21 AM UTC: 
 hashmap.c | 3 ++-
 1 file changed, 2 insertions(+), 1 deletion(-)
In file included from test.c:4:
test.c: In function ‘createMap’:
hashmap.c:60:12: error: ‘*map.buckets’ is used uninitialized [-Werror=uninitialized]
   60 |     if (map->buckets[i] != NULL) return 0;
      |         ~~~^~~~~~~~~
cc1: all warnings being treated as errors
Compilation failed
6b09b69
